	* Resources now default to no value
	* Quit trying to get user info for MUC's (Paul Aurich)
	* Send "client-accepts-full-bind-result" attribute during SASL login.
	  This will fix Google Talk login failures if the user configures the
	  wrong domain for his/her account.
	* Support new <metadata/> element to indicate no XEP-0084 User Avatar
	  (Paul Aurich)
	
	Zephyr:
	* Enable auto-reply, to emulate 'zaway' (Toby Schaffer)
	* Fix a crash when an account is configured to use tzc but tzc is not
	  installed or the configured tzc command is invalid (Michael Terry)
	* Fix a 10 second delay waiting on tzc if it is not installed or the
	  configured command is invalid (Michael Terry)

	Pidgin:
	* On GTK+ 2.14 and higher, we're using the gtk-tooltip-delay setting
	  instead of our own (hidden) tooltip_delay pref.  If you had
	  previously changed that pref, add a line like this to
	  ~/.purple/gtkrc-2.0 (where 500 is the timeout (in ms) you want):
	      gtk-tooltip-timeout = 500
	  To completely disable tooltips (e.g. if you had an old tooltip_delay
	  of zero), add this to ~/.purple/gtkrc-2.0:
	      gtk-enable-tooltips = 0
	* Moved the release notification dialog to a mini-dialog in the
	  buddylist.  (Thanks to Casey Ho)
	* Fix a crash when closing an authorization minidialog with the X then
	  immediately going offline (Paul Aurich)

	Finch:
	* Allow binding meta+arrow keys for actions.


version 2.5.2 (10/19/2008):
	libpurple:
	* Fixed a crash on removing a custom buddy icon on a buddy.
	* Fixed a crash caused by certain self-signed SSL certificates.
	* Enable a number of strong ciphers which were previously disabled
	  when using NSS.  (Thanks to Marcus Trautwig.)

	Pidgin:
	* The status selector now saves your message when changing status.
	* Fix a case where a conversation window could close unexpectedly.
	* A mute sounds option has been added to the preferences window to
	  help with discoverability.  CTRL+S is no longer bound to mute.